crates/reinhardt-core/macros/tests/ui/settings/fail/settings_unknown_setting_attr.rs
use reinhardt_macros::settings;

#[settings(fragment = true, section = "test")]
struct BadFragment {
	#[setting(require)]
	pub port: u16,
}

fn main() {}
