crates/reinhardt-core/macros/tests/ui/settings/fail/settings_unknown_setting_attr.stderr
error: unknown setting attribute, expected one of: `required`, `optional`, `default`, `node`, `leaf`
 --> tests/ui/settings/fail/settings_unknown_setting_attr.rs:5:12
  |
5 |     #[setting(require)]
  |               ^^^^^^^
